# libblorb

./: AUTHORS  README.md  cleanup.sh  configure.ac
include/: Makefile.am  blorb.h
src/: Makefile.am  blorb.c
