AC_PREREQ([2.61])
AC_INIT([libblorb], [1.0], [armandch@gmail.com])
AC_CONFIG_AUX_DIR(aux-dist)
AM_INIT_AUTOMAKE

AC_PROG_MAKE_SET
AC_PROG_CC
AC_LANG(C)

CFLAGS="-fPIC"

AC_CONFIG_MACRO_DIR([m4])

LT_PREREQ([2.2])
LT_INIT([shared])

AC_CONFIG_FILES([Makefile include/Makefile src/Makefile])
AC_OUTPUT
